# ChangeLog for sys-kernel/genkernel-next
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/genkernel-next/ChangeLog,v 1.35 2014/02/27 11:44:19 lxnay Exp $

*genkernel-next-54 (27 Feb 2014)

  27 Feb 2014; Fabio Erculiani <lxnay@gentoo.org> -genkernel-next-53.ebuild,
  +genkernel-next-54.ebuild:
  version bump, drop old

*genkernel-next-53 (25 Feb 2014)

  25 Feb 2014; Fabio Erculiani <lxnay@gentoo.org> -genkernel-next-50.ebuild,
  +genkernel-next-53.ebuild:
  version bump, drop old

  18 Jan 2014; Pacho Ramos <pacho@gentoo.org> genkernel-next-35.ebuild:
  ia64 stable, bug #485234 (thanks to Emeric Maschino for testing)

  18 Jan 2014; Pacho Ramos <pacho@gentoo.org> genkernel-next-35.ebuild,
  genkernel-next-50.ebuild:
  ia64 keyword, bug #488046 (thanks to Emeric Maschino for testing)

*genkernel-next-50 (08 Dec 2013)

  08 Dec 2013; Fabio Erculiani <lxnay@gentoo.org> -genkernel-next-49.ebuild,
  +genkernel-next-50.ebuild:
  version bump, drop broken v49 ebuild

*genkernel-next-49 (08 Dec 2013)

  08 Dec 2013; Fabio Erculiani <lxnay@gentoo.org> -genkernel-next-40.ebuild,
  -genkernel-next-47.ebuild, +genkernel-next-49.ebuild:
  version bump, also fix bug #493346

  07 Dec 2013; Pacho Ramos <pacho@gentoo.org> genkernel-next-35.ebuild:
  x86 stable, bug #485234

*genkernel-next-47 (02 Dec 2013)

  02 Dec 2013; Fabio Erculiani <lxnay@gentoo.org> +genkernel-next-47.ebuild:
  version bump

  09 Nov 2013; Pacho Ramos <pacho@gentoo.org> genkernel-next-35.ebuild:
  amd64 stable, bug #485234

*genkernel-next-40 (23 Oct 2013)

  23 Oct 2013; Fabio Erculiani <lxnay@gentoo.org> -genkernel-next-38.ebuild,
  +genkernel-next-40.ebuild:
  version bump the unstable version

*genkernel-next-38 (20 Oct 2013)

  20 Oct 2013; Fabio Erculiani <lxnay@gentoo.org> -genkernel-next-37.ebuild,
  +genkernel-next-38.ebuild:
  version bump

  20 Oct 2013; Fabio Erculiani <lxnay@gentoo.org> -files/genkernel.bash,