@@ -1,10 +1,24 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX usbirboy-0.2.1-kernel-2.6.16.diff 1488 SHA256 58466c199af78c246ecf281dcd05828b88d42ee4847acfa9e87f527339cbe730 SHA512 50f9463d8de7744cc6f4c6eddb695158c3ade8e9be956599ef4ebf0a968d2528cb6a4835ae75856de326b728049ab1b621dccb5394aedb668d89d8434087c531 WHIRLPOOL 889fc14296d74e6cd5ddf29b9e65f248970ee6401149c087aaeb11960d4d74b7df534263055d40eefbf953f2ef39687a7fe804fb8ee788fef0b0d6609ba1d7c8
 AUX usbirboy-0.2.1-module_param.diff 1078 SHA256 b679f54b235cef938897d0bbca92f869ce9aa00d7104298a9df279bf13422851 SHA512 d42170549c7462ca915c5b4abb7773bd3c59a7c2c3f2bba049c9328505483043e13819ddbb49821c45b7ec696a6ba622cc5dd3456588840908fec237c13984fb WHIRLPOOL 956110eb7890d2197477b823d132520cc2f08089e5c91256a981b60baa8ff341585a3391061be53b81f77311af5ba3762e5d116ba202539b1f531ad5a3932e29
 AUX usbirboy-0.2.1-nice-kernel-msgs.diff 1533 SHA256 a200b6da9a8cb606ec30c1fc24665c15dda6f869ac531317d737a666b263b7df SHA512 6c7f65c0a0fd4f1642a046e991615eadd846b6a8aeedfbf6c5ef06301674581ff68ab80873d237075e6d6fe977a32b776301682bd8fd2d5e5ef4ee75bd660276 WHIRLPOOL 1e7b180432a77d180dc5187f16354d1b212ab11658e68ab8669a2c15d2cee1ef26aa383783e36dc01bcc050fdbc10e85fa2e5c0edb53ffbc00349a207783836b
 DIST usbirboy-0.2.1.tar.gz 38664 SHA256 144e6e29dcce004f4999e2f90551529346516c478ae0773f753fda3abaed3ffd SHA512 f26daa847214f60e0883f261cf11d758f0d7a61434e2ec3c7dcee9862362d4a0d16225619cf920528a9a40f245eee97a3531112c1b57e1bec4d191a4196f161c WHIRLPOOL b1b31cdf874d8b0c040f4921bcab47d5292fba56600cab64c9b8e340c04267f3f1099473aa250043e775176cb0df4ba6b6eb1e4ee9616a7482ebfd95dfe652ab
 DIST usbirboy-0.3.1.tar.gz 49649 SHA256 cb879c1c67bb8deba385a12d5d97ca9ea6b148e77d1cd985a4fa3054b71d5cc6 SHA512 49f5c9eed4272b3066a87bfbacf95b39f1912a0fd22e580a87cf6b850e4ce98adb2c7ffb08b4c3db6d5b9cf298caa279ebeb51372eb95b9edf0b1ca02ecfba60 WHIRLPOOL e542f81644ca84953b2c789676a8f7b469358e0283262cb4881dfe0e4e87b8c140b5b47c68699057bcf5ccff0ba9771dfcd40ed1859d945604223c6e2e6084c0
-EBUILD usbirboy-0.2.1-r1.ebuild 1455 SHA256 9ef2b5527b3807b7ef599eaf343a3972a31cd4174aa5ac02407ce6321a2d750a SHA512 b2f609ee391086f63a937acb04f8c97fb98c88b97950d35ccf72b9cd84e20f8d6dd1a2fa0f095ef2300f24841d4ebaedece465d199ddd81b4355e1e6fabcbdf5 WHIRLPOOL 07538fb8030fbfecbb961adddd3b47037711cb06dbcff4744464044f2ec9b427bb5ca7e6107e015d4e3454dfbce5d1c122aec92cd2f7d53d9e5cf8b6480fb811
+EBUILD usbirboy-0.2.1-r1.ebuild 1455 SHA256 7c24198e76d60df71442f40f40adb88037363262a8094cdf0bb90bcd93756b83 SHA512 f63564e28fdc26e99136c2a861c3b5ee4219e91d41fd414c7b63e15e378de4e9a490ea5658628778596e82a5291060dac553354458b3fb42d56471497bd47e88 WHIRLPOOL 3de6c103e6aedfe7f4718c5321ac946522c6ab78dc37dd4ab98fe4ea8e1ef13a74f9abd670023be3c34147da34747b0e7c88995051d2dab19fff4e3d7a194e40
 EBUILD usbirboy-0.3.1-r1.ebuild 1280 SHA256 d82b5715797595d2973841e581f8f3a941e23f39c2aa331c30190e0d432a2662 SHA512 9ed70af823eb4157a259daf50a16cba0579eeb517e8e04ca77d28e1a57d8496072f94ab745a13a79252324d70a0bdcca6be4622b99920434f97c49c86ecb0d46 WHIRLPOOL 1a5b982aea2622f74a24b28de94157383f2e7e28e40602177741af0f31e17f2ba24b8842ca5375cc9234a6f4e5e053b7f18e378e85008eacedef5599c8e47542
 EBUILD usbirboy-0.3.1.ebuild 1287 SHA256 5a3030d319341c2ec6e61a58e2df61c9f7b39a383e48f3adb35f2e34fe3e1426 SHA512 e147786f03d982637e7d8f13af5caed8f28138ade12a21bf327ffe407a4eee5e591c00ac8b073145a4b689b5ddf3f012edec97337b0f02e77805c82c20c651f6 WHIRLPOOL 1abfa893df7a48485077c9ed50bcb96726a4919cbbd49cb9c2f41bc34ad8d6a214312d581530ab978319642f2974835d9b66211ca2fd28557dac06da6393efea
-MISC ChangeLog 2959 SHA256 a76a3ac1f7b931af93c31e3f08bcd5418abd6e2fba1cd033c846fdb9e0c1cff1 SHA512 7573acf1255c87dea541fa0a3b19a31f5784b40e4e0380fbf1037a69abc1e2715d5a627ea287ef08062244320d8c4239b231ba407c887a004622ea5c991ec88a WHIRLPOOL d7c92925a8e1920f8e7217337c2b487a9375385516fe88f0968948941ee8f8dad72fe0c99ad032aabadfa3122ceca3899145b9b0ae5c66d7a85fb9c6518ca8da
+MISC ChangeLog 3173 SHA256 c657a22239c7c2066b45699f6b43c85d1cea98b5769c7d237904613625a8fc43 SHA512 36652e28ac1423d66afe0b95365a03fa339359200e7cca3973d3d765b06bcea30defc441a517f3117b82f49fa9159c58d41280a4560e965595b573310f4ca446 WHIRLPOOL 809e90f0bde2b5ff7196dd1decb40dd02f9d66aadf116140f11667adce507bc46cfe9c2cfcb88557fc75d9c77ad48eee03cee4b27a6170e71f802dfe36619c7e
 MISC metadata.xml 162 SHA256 aaad144c69dd58781e1dc97b5fbad08a5b4db504bd3cbbb4ab27018a307d5d81 SHA512 bb817dae86e8c763aedea0a8707f51c45e61369de77bac004dddc63cd4a14494a01af06cefee45653690d846a7f956c16d5a87ce7b39fdb0c402925c3e42a640 WHIRLPOOL f77d307bcaa0f3fe6376136e35bf4a2fac39ccef6c4ff2a2343254e9e4d1c90dd301ba35bb830779c3c392974dd38ce1ed03eeb7d91bc5c2713e53732df840d0
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.22 (GNU/Linux)
+
+iQEcBAEBCAAGBQJTPS5ZAAoJEJWyH81tNOV9fWMH/iLThu+wocVMNw8LdwvG6fVe
+dV44udVjqqO3GO4iRtWrBsfHbIHljThuQAzk+NohRyWQ1/RjFFsTsBUlpaw4HH9m
+NVzLw6tqznQeH5jpQTZ8Pht8wMrzH0eo28kLj84mA0ez8c7Pq3CYH3rhe9RCmUPV
+1G2oBTJUZnT9SJVXL/8yhL6qawTtVaBWmW3RL2cSO6YhifFhO4mzQnEDCnBHKcZD
+hp6EoDPHrhXESS6NRFqhG/x0o1UAeQsgiG69Yh1NK+sTj+rKhZql/FlJZLqaKI6K
+aYc1CvCvie1w5ST7DX3s5Xdy35NMkWEnj1ef3EjhgYW6MkyYPiaLiUG/ppElgU4=
+=x650
+-----END PGP SIGNATURE-----
