@@ -3,10 +3,10 @@ DEPEND=kernel_linux? ( virtual/modutils ) sys-apps/sed kernel_linux? ( virtual/l
 DESCRIPTION=Use home made infrared receiver connected via USB
 HOMEPAGE=http://usbirboy.sourceforge.net/
 IUSE=kernel_linux
-KEYWORDS=alpha amd64 ia64 ppc ppc64 x86
+KEYWORDS=~alpha amd64 ia64 ppc ppc64 x86
 LICENSE=GPL-2
 RDEPEND=kernel_linux? ( virtual/modutils )
 SLOT=0
 SRC_URI=mirror://sourceforge/usbirboy/usbirboy-0.2.1.tar.gz
 _eclasses_=eutils	af81d52c25ec93fbdff71e0efb0de7b7	linux-info	90944ede7e9761bd7ef07602acdef9e3	linux-mod	101302d4b7b694ea9622bbffb187d0de	multilib	fac675dcccf94392371a6abee62d909f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3	versionator	a8a3963967d6140be9a14b08bb8f047f
-_md5_=30f9c084ad68d062e62dfa8a92653677
+_md5_=f6cd2efa49a26d8148cf9bb85bebed81
