@@ -3,14 +3,16 @@ Hash: SHA256
 
 DIST genkernel-next-35.tar.xz 2285208 SHA256 b50b164240d6428588c163e7f01c0f6090cb5c55a2a0f2e2e9c62154b254ae20 SHA512 a288c89dfb482ea90a59dd71308d22441e40360912e9cdc5e3ee16e2f7b52eaa08a5bcb542e0b95e97999fa20eda4151751b38e98131b7b52d6dad208e773495 WHIRLPOOL bf44120eacf20d322c52c191e673c1a7e0c7b73aa795a921d35bfdd187269d2e22fd385cf8acf712f109c5a701a7474a2e37f151a8508937ee4c3623d361a2f2
 DIST genkernel-next-54.tar.xz 2285892 SHA256 b903842ed4f9371ed89b67f2fc505529978ec6ff1ac7824c1eb1cdde75a5e5ea SHA512 bfc5a36910a348968d481ba3ccf0aebbc8a4f37af2c1df757dba889b0f2a776cc241659f4962717f8d03b7aa0df1330f95eb7da7224db8aa4636d49ccb6a5d82 WHIRLPOOL ac419418b7d4b4b8636d801208a6eaf3bd22aa1ca44f8f5a71efc60ae0eb803b8d9677e8f223a39f4a0e328970a1f6d1a9d093d25aacdb67600f38e49f288cf0
+DIST genkernel-next-55.tar.xz 2285968 SHA256 ea0bbba9cdb4d225d1085af67c84616a1e7e2f7378a6dca7a068c5de4d4096d4 SHA512 2aa86d6bcb2c6350c8084dcc79d2d934df165496f978206e4cbd7225a275fa3ea1a9522fcab6bbd6a27b93f794efde239c95e2a7ddfae2fff70923b6dc403c6f WHIRLPOOL 260c3d03efe99b3ebccd7cbf4013539e7c1957e981e3e944c329989395b26ad5e140c7681f9168fdf26a1f724f855a1224eaecde57ca357ab9c70d1240ceb2d2
 EBUILD genkernel-next-35.ebuild 1516 SHA256 d4801e4a0dc5d3c10e97f389324f1b1489eddffb9a050ec66a791f999d0bb39e SHA512 993ea7e45f5b4dd6259c415e47d54bc70122a5cb4fd4dd89b32d3805a53d8dfcd69e3ba1145be05f05be4e50291658970e436ed2f43726e0c54956f53df66cf4 WHIRLPOOL 1ffb9f940abb35485a89cd6229a1295614a9733e1b96d838bb314a2d3e4763b17912631619384db84935f43854f2d939d4c4e00b91547e774a592339d560e033
 EBUILD genkernel-next-54.ebuild 1519 SHA256 62c088c28dabacdea58e36f87f1f6348390bd1a525198fbd3c35db4b40d25300 SHA512 d47b456b2f4e9a3166a147cff671ae71a37d7b9ec6964b80fd510f9140ee99dbc4dc398cb74f9ebf50138113a327cfa6df237d62a6be568abc533f7926abe33b WHIRLPOOL 085ff39174dc3cb552aeef7d3b966f840a4f13cf57f041398158a1a19601dbc7850b10580457f1e56d8c97220d470b912584202e7c2b2f175bf0d824daa37b7b
-MISC ChangeLog 5625 SHA256 33fbbd1558b7c95865598d8bd869b172220b297e8b48b372cd182f6b74a3f4e9 SHA512 f1ad9b3a2cab9ef96b249d3f5427a08281259f1a97c3b943474701490d42cd283fa4018c19ed81a5dd0606dddf9de0b84961ded106988da34d206d91ab143362 WHIRLPOOL 575e51af46198c948ad8e4eac93675edc6b4b1429691416609594b7360cb1a2318b0522095e52fda1c3b64d76c6f4c75f4454b7314c3e5a788e52c7ec5f4dc3e
+EBUILD genkernel-next-55.ebuild 1519 SHA256 3927baaf64afabb73d26b7382395289f48d9532d358741e76ee3a51ace9309bb SHA512 a6f14039a8e65da6f041676a657ee33b2d902497505adc357ba38418b8390c4275dd25502dd0b0a36e36c7e80d4dd0ab13b91b0cb5ceeccc2ceb29b6ab0fc86e WHIRLPOOL 4bbe5a9362d01efa512cbab3696c9f503433c414bc7a6538533c6734e62a069439ca8bd5849988255cb5c6e43a1d71fe78f73e32414df31dd8c443ee4392b549
+MISC ChangeLog 5752 SHA256 8b00b6a41075b2d9ba21d52adc9ae2847a672da2b7d0ad2e6b651ce7b59372d2 SHA512 aafc2159d9ac64982f2aa5e31a1d33cede25722545fbc67fe199cdd4352881a3cdb34d2daf976714688ef959689b28913f82760e6e04a516e3de6d11e707eced WHIRLPOOL 6d945d7e0ea97c763b1d7b0a22ee18daa8c3fbd1464fe163ad2046145e2d56c31c7047b746531ffa2682f7614013668d6efd200971816dec8fbeee34aa120dd1
 MISC metadata.xml 654 SHA256 9d4b66747ee265b68edfcd8b8ce81dd3608d37218b45bca4bd7e6d8c0e21fef6 SHA512 b36aac5f7d7e296c261f70cefbb6158cbaf733da79766db4d453397fe683dee0377a8ffb043c10c13fd90c40b4ef06986eb2165eec5410dcad918c0d59076753 WHIRLPOOL 7eb45a1f0b75634a8778277e1a5499e04a03162978fbc0010523ad71b4b4aa0dfb089b24dbabc05c20c67e46239d7807c84fbd8f34168adcd043d03fb8edf0e7
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlMPJRQACgkQfaj9zK3JFuVBNgCfS5HCNKMLF3P8u6I2MEEGNNsS
-eTcAnAs9QXQxZqKmZEJJLdP+EjFd0Pnd
-=4Bpc
+iEYEAREIAAYFAlM9LKIACgkQfaj9zK3JFuXFAgCeP95YQLYHYGsPRP+3bxBw4U6G
+3wQAoNjJl82OJJUSoBNzKhnBBryJKXb1
+=jzbo
 -----END PGP SIGNATURE-----
